Initial commit for public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -689,3 +689,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2024-09-14T09:48:27 – K0ivlxwuoL8jk6aWsC4J */
 /* 2024-11-18T13:51:08 – iKBYEHfxf0naqYm3xbBt */
 /* 2024-12-24T05:07:46 – Uk82RWXHXL8OzmCr7SfC */
+/* 2025-05-07T18:43:18 – Ycbmtd7Y6OuSIurt2eds */
