--- a/public/style.css
+++ b/public/style.css
@@ -691,3 +691,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2024-12-24T05:07:46 – Uk82RWXHXL8OzmCr7SfC */
 /* 2025-05-07T18:43:18 – Ycbmtd7Y6OuSIurt2eds */
 /* 2025-05-13T06:59:01 – NEG82yyjhg8Qk0Q7lV2c */
+/* 2025-06-13T16:54:32 – hLmnRKgnmyN60hVlQ9Fp */
