--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -81,3 +81,4 @@
 /* 2025-01-02T18:17:26 – n6WyI5L2X9JZMxHWH2Dc */
 /* 2025-04-13T07:40:46 – jh73620GkYhQ5OE7rudf */
 /* 2025-05-12T21:35:35 – iLrMaKKfLQCj6nLCQmOL */
+/* 2025-06-28T02:52:40 – YH0SDdba4nYpjBNR5pZI */
